Support maven 4