@@ -41,6 +41,9 @@ POSSIBILITY OF SUCH DAMAGE.
         <maven.compiler.implicit>none</maven.compiler.implicit>
         <failOnMissingWebXml>false</failOnMissingWebXml>
         <jacocoArgLine/>
+        
+        <!-- Library versions -->
+        <!-- Jakarta EE library versions must match GlassFish 7.0.21 -->
         <version.jakartaee>10.0.0</version.jakartaee>
         <!--<version.swagger>2.2.20</version.swagger>-->
         <!--<version.swagger-ui>5.4.2</version.swagger-ui>-->
@@ -62,6 +65,13 @@ POSSIBILITY OF SUCH DAMAGE.
         <!--<version.k-plugin-mechanism>1.0.0</version.k-plugin-mechanism>-->
         <!--<version.k-formula-mechanism>1.0.0-M4</version.k-formula-mechanism>-->
         <!--<version.safi-pif>2.0.4</version.safi-pif>-->
+        <version.jacoco>0.8.12</version.jacoco>
+        <version.maven-surefire>3.5.2</version.maven-surefire>
+        <version.maven-clean>3.4.1</version.maven-clean>
+        <version.maven-resources>3.3.1</version.maven-resources>
+        <version.maven-compiler>3.14.0</version.maven-compiler>
+        <version.maven-war>3.4.0</version.maven-war>
+        <version.maven-install>3.1.3</version.maven-install>
     </properties>
 
     <licenses>
@@ -170,7 +180,7 @@ POSSIBILITY OF SUCH DAMAGE.
             <artifactId>assertj-core</artifactId>
             <version>${version.assertj}</version>
             <scope>test</scope>
-<!--            <exclusions>
+            <!--            <exclusions>
                 <exclusion>
                     <groupId>net.bytebuddy</groupId>
                     <artifactId>byte-buddy</artifactId>
@@ -216,7 +226,7 @@ POSSIBILITY OF SUCH DAMAGE.
         
         <!-- License: EPL-2.0 -->
         <!-- License: GPL -->
-                <dependency>
+        <dependency>
             <groupId>org.glassfish.expressly</groupId>
             <artifactId>expressly</artifactId>
             <version>${version.expressly}</version>
@@ -225,8 +235,8 @@ POSSIBILITY OF SUCH DAMAGE.
         
         <!-- License: EDL-1.0 -->
         <!-- License: EPL-2.0 -->
-                <dependency>
-                <groupId>org.eclipse</groupId>
+        <dependency>
+            <groupId>org.eclipse</groupId>
             <artifactId>yasson</artifactId>
             <version>${version.yasson}</version>
             <scope>test</scope>
@@ -277,16 +287,65 @@ POSSIBILITY OF SUCH DAMAGE.
     <build>
         <pluginManagement>
             <plugins>
-                <!--                <plugin>
+                <!-- License: APL-2.0 -->
+                <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-clean-plugin</artifactId>
-                    <version>3.3.2</version>
-                </plugin>-->
-                <!--                <plugin>
+                    <version>${version.maven-clean}</version>
+                </plugin>
+                
+                <!-- License: APL-2.0 -->
+                <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
-                    <version>3.12.1</version>
-                </plugin>-->
+                    <version>${version.maven-compiler}</version>
+                </plugin>
+                               
+                <!-- License: APL-2.0 -->
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-install-plugin</artifactId>
+                    <version>${version.maven-install}</version>
+                </plugin>
+                
+                <!-- License: APL-2.0 -->
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-resources-plugin</artifactId>
+                    <version>${version.maven-resources}</version>
+                </plugin>
+                
+                <!-- License: APL-2.0 -->
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-javadoc-plugin</artifactId>
+                    <version>3.11.2</version>
+                </plugin>
+                
+                <!-- License: APL-2.0 -->
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>${version.maven-surefire}</version>
+                    <configuration>
+                        <argLine>@{jacocoArgLine} -Dfile.encoding=${project.build.sourceEncoding}</argLine>
+                    </configuration>
+                </plugin>
+                
+                <!-- License: APL-2.0 -->
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-war-plugin</artifactId>
+                    <version>${version.maven-war}</version>
+                </plugin>
+                
+                <!-- License: EPL-2.0 -->
+                <plugin>
+                    <groupId>org.jacoco</groupId>
+                    <artifactId>jacoco-maven-plugin</artifactId>
+                    <version>${version.jacoco}</version>
+                </plugin>
+                
                 <!--                <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-deploy-plugin</artifactId>
@@ -297,29 +356,13 @@ POSSIBILITY OF SUCH DAMAGE.
                     <artifactId>maven-failsafe-plugin</artifactId>
                     <version>3.2.3</version>
                 </plugin>-->
-                <!--                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-install-plugin</artifactId>
-                    <version>3.1.1</version>
-                </plugin>-->
-                <!--                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-resources-plugin</artifactId>
-                    <version>3.3.1</version>
-                </plugin>-->
+                
                 <!--                <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-site-plugin</artifactId>
                     <version>4.0.0-M13</version>
                 </plugin>-->
-                <!--                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-surefire-plugin</artifactId>
-                    <version>3.2.3</version>
-                    <configuration>
-                        <argLine>@{jacocoArgLine} -Dfile.encoding=${project.build.sourceEncoding}</argLine>
-                    </configuration>
-                </plugin>-->
+                
                 <!--                <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-verifier-plugin</artifactId>
@@ -330,21 +373,13 @@ POSSIBILITY OF SUCH DAMAGE.
                     <artifactId>maven-jar-plugin</artifactId>
                     <version>3.3.0</version>
                 </plugin>-->
-                <!--                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-war-plugin</artifactId>
-                    <version>3.4.0</version>
-                </plugin>-->
+                
                 <!--                <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-source-plugin</artifactId>
                     <version>3.3.0</version>
                 </plugin>-->
-                <!--                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-javadoc-plugin</artifactId>
-                    <version>3.6.3</version>
-                </plugin>-->
+                
                 <!--                <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-antrun-plugin</artifactId>
@@ -382,11 +417,9 @@ POSSIBILITY OF SUCH DAMAGE.
                         </dependency>
                     </dependencies>
                 </plugin>-->
-                <!--                <plugin>
-                    <groupId>org.jacoco</groupId>
-                    <artifactId>jacoco-maven-plugin</artifactId>
-                    <version>0.8.11</version>
-                </plugin>-->
+                
+                
+                
                 <!--                <plugin>
                     <groupId>org.sonarsource.scanner.maven</groupId>
                     <artifactId>sonar-maven-plugin</artifactId>
@@ -394,8 +427,53 @@ POSSIBILITY OF SUCH DAMAGE.
                 </plugin>-->
             </plugins>
         </pluginManagement>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <compilerArgs>
+                        <arg>-Xlint:-options</arg>
+                        <arg>-proc:full</arg>
+                    </compilerArgs>
+                </configuration>
+            </plugin>
+        </plugins>
     </build>
     <profiles>
+        <profile>
+            <id>release-profile</id>
+            
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.jacoco</groupId>
+                        <artifactId>jacoco-maven-plugin</artifactId>
+                        <configuration>
+                            <propertyName>jacocoArgLine</propertyName>
+                            <excludes>
+                                Exclude the automatically generated codes. 
+                                <exclude>**/*_.*</exclude>
+                            </excludes>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <id>prepare-agent</id>
+                                <goals>
+                                    <goal>prepare-agent</goal>
+                                </goals>
+                            </execution>
+                            <execution>
+                                <id>report</id>
+                                <goals>
+                                    <goal>report</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
         <!--        <profile>
             <id>release-profile</id>
 
